feat: Implement forgot password functionality and add test endpoint
- Added a new endpoint for password reset in AuthController.
- Integrated Firebase API for sending password reset emails.
- Updated SecurityConfig to allow access to the forgot password endpoint.
- Introduced a test endpoint for verification purposes.
- Enhanced UserController to retrieve user profile pictures by UID.
- Updated FirebaseAuthService to handle password reset logic and mock mode.
- Improved FirestoreService to support mock mode and user profile retrieval.
- Updated frontend to include a forgot password page with toast notifications.
- Added typing animation in the chat component for better user experience.
- Refactored chat component to manage user profile pictures and conversations.